ubiquity (2.7.37) UNRELEASED; urgency=low

  * Only set the ATK widget names to their GtkBuilder counterparts when
    --ldtp is set (LP: #781385)
  * Provide a means of preseeding an oem-config frontend (LP: #820514).

 -- Evan Dandrea <ev@ubuntu.com>  Mon, 26 Sep 2011 11:02:46 +0100

ubiquity (2.7.36) oneiric; urgency=low

  * Showing and hiding the release notes and update the instaler links
    are now handled in the Internet connectivity callback (LP: #856213).
  * Enter the GTK main loop to avoid the wallpaper setting resources
    being cleaned up (LP: #854179).

 -- Evan Dandrea <ev@ubuntu.com>  Thu, 22 Sep 2011 17:59:55 +0100

ubiquity (2.7.35) oneiric; urgency=low

  [ Evan Dandrea ]
  * Don't show the battery warning when the system is not battery
    powered (LP: #848000).
  * Move network watch initialization for the KDE frontend to the
    correct place (LP: #855763).

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 21 Sep 2011 15:52:42 -0400

ubiquity (2.7.34) oneiric; urgency=low

  * Disable setting the ubiquity/online debconf question for now. We're
    not actually using it for anything yet (LP: #855277).
  * Disable the power indicator as it's causing g-s-d to spawn, which
    races against our own spawning of it (LP: #854717).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 21 Sep 2011 10:00:45 +0100

ubiquity (2.7.33) oneiric; urgency=low

  * Move watching Internet connectivity to the frontends themselves,
    which then ask each plugin to act accordingly (LP: #854706).
  * Update translations from Launchpad.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 20 Sep 2011 19:22:01 +0100

ubiquity (2.7.32) oneiric; urgency=low

  * Also show the Ubiquity launcher on Unity.

 -- Stéphane Graber <stgraber@ubuntu.com>  Tue, 20 Sep 2011 09:52:32 -0400

ubiquity (2.7.31) oneiric; urgency=low

  [ Evan Dandrea ]
  * Build-depend on the GTK3 version of libindicator.

  [ Colin Watson ]
  * Move setup_power_watch out of the ubi-prepare plugin into a new