@@ -45,6 +45,8 @@ class Install(install_misc.InstallBase):
     def __init__(self):
         """Initial attributes."""
 
+        self.update_proc = None
+
         if os.path.isdir('/rofs'):
             self.source = '/rofs'
         elif os.path.isdir('/UNIONFS'):
@@ -118,8 +120,8 @@ class Install(install_misc.InstallBase):
             # imagine.  Have those spin until the lock is released.
             if self.db.get('ubiquity/download_updates') == 'true':
                 cmd = ['/usr/share/ubiquity/update-apt-cache']
-                subprocess.Popen(cmd, stdin=subprocess.PIPE,
-                                 stdout=subprocess.PIPE)
+                self.update_proc = subprocess.Popen(cmd, stdin=subprocess.PIPE,
+                                                    stdout=subprocess.PIPE)
             try:
                 self.copy_all()
             except EnvironmentError, e:
@@ -151,6 +153,9 @@ class Install(install_misc.InstallBase):
 
         if self.source == '/var/lib/ubiquity/source':
             self.umount_source()
+
+        if self.update_proc:
+            self.update_proc.terminate()
 
     def find_cd_kernel(self):
         """Find the boot kernel on the CD, if possible."""
